Inclusão de página: em breve

--- a/Setup/templates/index.html
+++ b/Setup/templates/index.html
@@ -23,20 +23,20 @@
                     <a href="{% url 'noticias' %}" class="btn btn-primary mt-3">Venha conferir!</a>
                 </div>
                 <div class="card-footer text-muted">
-                    2 days ago
+                    Novembro 2021
                 </div>
             </div>
             <div class="card text-center m-4">
                 <div class="card-header">
-                    Featured
+                    Próximo Projeto em construção!
                 </div>
                 <div class="card-body corrigir-botao">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary mt-3">Go somewhere</a>
+                    <h5 class="card-title">Fique atento para acompanhar as últimas atualizações!</h5>
+                    <p class="card-text"></p>
+                    <a href="{% url 'em_breve' %}" class="btn btn-primary mt-3">Em breve!</a>
                 </div>
                 <div class="card-footer text-muted">
-                    2 days ago
+                    Em breve!
                 </div>
             </div>
         </div>
