Inserido bucket aws para arquivos de imagens e estáticos

--- a/Setup/templates/index.html
+++ b/Setup/templates/index.html
@@ -31,7 +31,7 @@
                     Próximo Projeto em construção!
                 </div>
                 <div class="card-body corrigir-botao">
-                    <h5 class="card-title">Fique atento para acompanhar as últimas atualizações! Test</h5>
+                    <h5 class="card-title">Fique atento para acompanhar as últimas atualizações! The last Test da sextafire</h5>
                     <p class="card-text"></p>
                     <a href="{% url 'em_breve' %}" class="btn btn-primary mt-3">Em breve!</a>
                 </div>
