--- a/Setup/templates/portfolio/em_breve.html
+++ b/Setup/templates/portfolio/em_breve.html
@@ -5,7 +5,7 @@
 {% include 'partials/header.html' %}
 <main>
     <div class="container text-center mt-2 mb-2">
-        <img src="{% static 'img/em_breve.png' %}" class="img-fluid" alt="Responsive image">
+        <img src="{% static 'img/em_breve.png' %}" class="img-fluid mt-5 mb-5" alt="Responsive image">
     </div>
 
     {% include 'partials/footer.html' %}
