--- a/Setup/templates/noticias/noticias.html
+++ b/Setup/templates/noticias/noticias.html
@@ -9,7 +9,8 @@
     <nav class="navbar navbar-light bg-light position-relative">
         <div class="container-fluid justify-content-center">
             <form class="d-flex" action="{% url 'buscar' %}">
-                <input class="form-control me-2 text" type="search" name="buscar" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2 text" type="search" name="buscar" placeholder="Search"
+                    aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
 
             </form>
@@ -49,6 +50,45 @@
         </div>
     </div>
 
+    <!-- ##### Pagination ##### -->
+    <section class="top-catagory-area section-padding-20-0">
+        <div class="container mt-2 mb-2 ">
+            {% if noticias.has_other_pages %}
+            <ul class="pagination">
+                {% if noticias.has_previous %}
+                <li class="page-item">
+                    <a href="?page={{ noticias.previous_page_number}}" class="page-link">&laquo;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">&laquo;</a>
+                </li>
+                {% endif %}
+                {% for pagina in noticias.paginator.page_range %}
+                {% if noticias.number == pagina %}
+                <li class="page-item active">
+                    <a class="page-link">{{ pagina }}</a>
+                </li>
+                {% else %}
+                <li class="page-item">
+                    <a href="?page={{pagina}}" class="page-link">{{ pagina }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+                {% if noticias.has_next %}
+                <li class="page-item">
+                    <a href="?page={{ noticias.next_page_number }}" class="page-link">&raquo;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">&raquo;</a>
+                </li>
+                {% endif %}
+            </ul>
+            {% endif %}
+        </div>
+    </section>
+    <!-- ##### Pagination End ##### -->
 
     {% include 'partials/footer.html' %}
 </main>
