--- a/Setup/templates/portfolio/em_breve.html
+++ b/Setup/templates/portfolio/em_breve.html
@@ -4,10 +4,12 @@
 
 {% include 'partials/header.html' %}
 <main>
-    <div class="container text-center mt-2 mb-2">
-        <img src="{% static 'img/em_breve.png' %}" class="img-fluid mt-5 mb-5" alt="Responsive image">
+    <div class="mt-5 mb-5">
+        <p></p>
+        <div class="container text-center mt-5 mb-5">
+            <img src="{% static 'img/em_breve.png' %}" class="img-fluid mt-5 mb-5" alt="Responsive image">
+        </div>
     </div>
-
     {% include 'partials/footer.html' %}
 </main>
 </body>
